parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENTBLOCK
    DOSPUNTOS
    TIPONUMBER

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr
Rule 5     instruccion -> declaracion_instr
Rule 6     instruccion -> asignacion_instr
Rule 7     instruccion -> if_instr
Rule 8     instruccion -> if_else_instr
Rule 9     imprimir_instr -> CONSOLE PUNTO LOG PARIZQ expresion PARDER PUNTOCOMA
Rule 10    declaracion_instr -> LET ID IGUAL expresion PUNTOCOMA
Rule 11    asignacion_instr -> ID IGUAL expresion PUNTOCOMA
Rule 12    if_instr -> IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
Rule 13    if_else_instr -> IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA
Rule 14    expresion -> expresion MAS expresion
Rule 15    expresion -> expresion MENOS expresion
Rule 16    expresion -> expresion POR expresion
Rule 17    expresion -> expresion DIVIDIDO expresion
Rule 18    expresion -> expresion MAYQUE expresion
Rule 19    expresion -> expresion MENQUE expresion
Rule 20    expresion -> expresion IGUALQUE expresion
Rule 21    expresion -> expresion NIGUALQUE expresion
Rule 22    expresion -> MENOS expresion
Rule 23    expresion -> PARIZQ expresion PARDER
Rule 24    expresion -> ENTERO
Rule 25    expresion -> CADENA
Rule 26    expresion -> ID

Terminals, with rules where they appear

CADENA               : 25
COMMENTBLOCK         : 
CONSOLE              : 9
DIVIDIDO             : 17
DOSPUNTOS            : 
ELSE                 : 13
ENTERO               : 24
ID                   : 10 11 26
IF                   : 12 13
IGUAL                : 10 11
IGUALQUE             : 20
LET                  : 10
LLAVDER              : 12 13 13
LLAVIZQ              : 12 13 13
LOG                  : 9
MAS                  : 14
MAYQUE               : 18
MENOS                : 15 22
MENQUE               : 19
NIGUALQUE            : 21
PARDER               : 9 12 13 23
PARIZQ               : 9 12 13 23
POR                  : 16
PUNTO                : 9
PUNTOCOMA            : 9 10 11 12 13
TIPONUMBER           : 
error                : 

Nonterminals, with rules where they appear

asignacion_instr     : 6
declaracion_instr    : 5
expresion            : 9 10 11 12 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 23
if_else_instr        : 8
if_instr             : 7
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 12 13 13

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . declaracion_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . if_instr
    (8) instruccion -> . if_else_instr
    (9) imprimir_instr -> . CONSOLE PUNTO LOG PARIZQ expresion PARDER PUNTOCOMA
    (10) declaracion_instr -> . LET ID IGUAL expresion PUNTOCOMA
    (11) asignacion_instr -> . ID IGUAL expresion PUNTOCOMA
    (12) if_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (13) if_else_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA

    CONSOLE         shift and go to state 9
    LET             shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 12

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    if_else_instr                  shift and go to state 8

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . declaracion_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . if_instr
    (8) instruccion -> . if_else_instr
    (9) imprimir_instr -> . CONSOLE PUNTO LOG PARIZQ expresion PARDER PUNTOCOMA
    (10) declaracion_instr -> . LET ID IGUAL expresion PUNTOCOMA
    (11) asignacion_instr -> . ID IGUAL expresion PUNTOCOMA
    (12) if_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (13) if_else_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA

    $end            reduce using rule 1 (init -> instrucciones .)
    CONSOLE         shift and go to state 9
    LET             shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 12

    instruccion                    shift and go to state 13
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    if_else_instr                  shift and go to state 8

state 3

    (3) instrucciones -> instruccion .

    CONSOLE         reduce using rule 3 (instrucciones -> instruccion .)
    LET             reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVDER         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr .

    CONSOLE         reduce using rule 4 (instruccion -> imprimir_instr .)
    LET             reduce using rule 4 (instruccion -> imprimir_instr .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr .)
    IF              reduce using rule 4 (instruccion -> imprimir_instr .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr .)
    LLAVDER         reduce using rule 4 (instruccion -> imprimir_instr .)


state 5

    (5) instruccion -> declaracion_instr .

    CONSOLE         reduce using rule 5 (instruccion -> declaracion_instr .)
    LET             reduce using rule 5 (instruccion -> declaracion_instr .)
    ID              reduce using rule 5 (instruccion -> declaracion_instr .)
    IF              reduce using rule 5 (instruccion -> declaracion_instr .)
    $end            reduce using rule 5 (instruccion -> declaracion_instr .)
    LLAVDER         reduce using rule 5 (instruccion -> declaracion_instr .)


state 6

    (6) instruccion -> asignacion_instr .

    CONSOLE         reduce using rule 6 (instruccion -> asignacion_instr .)
    LET             reduce using rule 6 (instruccion -> asignacion_instr .)
    ID              reduce using rule 6 (instruccion -> asignacion_instr .)
    IF              reduce using rule 6 (instruccion -> asignacion_instr .)
    $end            reduce using rule 6 (instruccion -> asignacion_instr .)
    LLAVDER         reduce using rule 6 (instruccion -> asignacion_instr .)


state 7

    (7) instruccion -> if_instr .

    CONSOLE         reduce using rule 7 (instruccion -> if_instr .)
    LET             reduce using rule 7 (instruccion -> if_instr .)
    ID              reduce using rule 7 (instruccion -> if_instr .)
    IF              reduce using rule 7 (instruccion -> if_instr .)
    $end            reduce using rule 7 (instruccion -> if_instr .)
    LLAVDER         reduce using rule 7 (instruccion -> if_instr .)


state 8

    (8) instruccion -> if_else_instr .

    CONSOLE         reduce using rule 8 (instruccion -> if_else_instr .)
    LET             reduce using rule 8 (instruccion -> if_else_instr .)
    ID              reduce using rule 8 (instruccion -> if_else_instr .)
    IF              reduce using rule 8 (instruccion -> if_else_instr .)
    $end            reduce using rule 8 (instruccion -> if_else_instr .)
    LLAVDER         reduce using rule 8 (instruccion -> if_else_instr .)


state 9

    (9) imprimir_instr -> CONSOLE . PUNTO LOG PARIZQ expresion PARDER PUNTOCOMA

    PUNTO           shift and go to state 14


state 10

    (10) declaracion_instr -> LET . ID IGUAL expresion PUNTOCOMA

    ID              shift and go to state 15


state 11

    (11) asignacion_instr -> ID . IGUAL expresion PUNTOCOMA

    IGUAL           shift and go to state 16


state 12

    (12) if_instr -> IF . PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (13) if_else_instr -> IF . PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA

    PARIZQ          shift and go to state 17


state 13

    (2) instrucciones -> instrucciones instruccion .

    CONSOLE         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LET             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVDER         reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 14

    (9) imprimir_instr -> CONSOLE PUNTO . LOG PARIZQ expresion PARDER PUNTOCOMA

    LOG             shift and go to state 18


state 15

    (10) declaracion_instr -> LET ID . IGUAL expresion PUNTOCOMA

    IGUAL           shift and go to state 19


state 16

    (11) asignacion_instr -> ID IGUAL . expresion PUNTOCOMA
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MAYQUE expresion
    (19) expresion -> . expresion MENQUE expresion
    (20) expresion -> . expresion IGUALQUE expresion
    (21) expresion -> . expresion NIGUALQUE expresion
    (22) expresion -> . MENOS expresion
    (23) expresion -> . PARIZQ expresion PARDER
    (24) expresion -> . ENTERO
    (25) expresion -> . CADENA
    (26) expresion -> . ID

    MENOS           shift and go to state 22
    PARIZQ          shift and go to state 23
    ENTERO          shift and go to state 24
    CADENA          shift and go to state 25
    ID              shift and go to state 20

    expresion                      shift and go to state 21

state 17

    (12) if_instr -> IF PARIZQ . expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (13) if_else_instr -> IF PARIZQ . expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MAYQUE expresion
    (19) expresion -> . expresion MENQUE expresion
    (20) expresion -> . expresion IGUALQUE expresion
    (21) expresion -> . expresion NIGUALQUE expresion
    (22) expresion -> . MENOS expresion
    (23) expresion -> . PARIZQ expresion PARDER
    (24) expresion -> . ENTERO
    (25) expresion -> . CADENA
    (26) expresion -> . ID

    MENOS           shift and go to state 22
    PARIZQ          shift and go to state 23
    ENTERO          shift and go to state 24
    CADENA          shift and go to state 25
    ID              shift and go to state 20

    expresion                      shift and go to state 26

state 18

    (9) imprimir_instr -> CONSOLE PUNTO LOG . PARIZQ expresion PARDER PUNTOCOMA

    PARIZQ          shift and go to state 27


state 19

    (10) declaracion_instr -> LET ID IGUAL . expresion PUNTOCOMA
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MAYQUE expresion
    (19) expresion -> . expresion MENQUE expresion
    (20) expresion -> . expresion IGUALQUE expresion
    (21) expresion -> . expresion NIGUALQUE expresion
    (22) expresion -> . MENOS expresion
    (23) expresion -> . PARIZQ expresion PARDER
    (24) expresion -> . ENTERO
    (25) expresion -> . CADENA
    (26) expresion -> . ID

    MENOS           shift and go to state 22
    PARIZQ          shift and go to state 23
    ENTERO          shift and go to state 24
    CADENA          shift and go to state 25
    ID              shift and go to state 20

    expresion                      shift and go to state 28

state 20

    (26) expresion -> ID .

    PUNTOCOMA       reduce using rule 26 (expresion -> ID .)
    MAS             reduce using rule 26 (expresion -> ID .)
    MENOS           reduce using rule 26 (expresion -> ID .)
    POR             reduce using rule 26 (expresion -> ID .)
    DIVIDIDO        reduce using rule 26 (expresion -> ID .)
    MAYQUE          reduce using rule 26 (expresion -> ID .)
    MENQUE          reduce using rule 26 (expresion -> ID .)
    IGUALQUE        reduce using rule 26 (expresion -> ID .)
    NIGUALQUE       reduce using rule 26 (expresion -> ID .)
    PARDER          reduce using rule 26 (expresion -> ID .)


state 21

    (11) asignacion_instr -> ID IGUAL expresion . PUNTOCOMA
    (14) expresion -> expresion . MAS expresion
    (15) expresion -> expresion . MENOS expresion
    (16) expresion -> expresion . POR expresion
    (17) expresion -> expresion . DIVIDIDO expresion
    (18) expresion -> expresion . MAYQUE expresion
    (19) expresion -> expresion . MENQUE expresion
    (20) expresion -> expresion . IGUALQUE expresion
    (21) expresion -> expresion . NIGUALQUE expresion

    PUNTOCOMA       shift and go to state 29
    MAS             shift and go to state 30
    MENOS           shift and go to state 31
    POR             shift and go to state 32
    DIVIDIDO        shift and go to state 33
    MAYQUE          shift and go to state 34
    MENQUE          shift and go to state 35
    IGUALQUE        shift and go to state 36
    NIGUALQUE       shift and go to state 37


state 22

    (22) expresion -> MENOS . expresion
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MAYQUE expresion
    (19) expresion -> . expresion MENQUE expresion
    (20) expresion -> . expresion IGUALQUE expresion
    (21) expresion -> . expresion NIGUALQUE expresion
    (22) expresion -> . MENOS expresion
    (23) expresion -> . PARIZQ expresion PARDER
    (24) expresion -> . ENTERO
    (25) expresion -> . CADENA
    (26) expresion -> . ID

    MENOS           shift and go to state 22
    PARIZQ          shift and go to state 23
    ENTERO          shift and go to state 24
    CADENA          shift and go to state 25
    ID              shift and go to state 20

    expresion                      shift and go to state 38

state 23

    (23) expresion -> PARIZQ . expresion PARDER
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MAYQUE expresion
    (19) expresion -> . expresion MENQUE expresion
    (20) expresion -> . expresion IGUALQUE expresion
    (21) expresion -> . expresion NIGUALQUE expresion
    (22) expresion -> . MENOS expresion
    (23) expresion -> . PARIZQ expresion PARDER
    (24) expresion -> . ENTERO
    (25) expresion -> . CADENA
    (26) expresion -> . ID

    MENOS           shift and go to state 22
    PARIZQ          shift and go to state 23
    ENTERO          shift and go to state 24
    CADENA          shift and go to state 25
    ID              shift and go to state 20

    expresion                      shift and go to state 39

state 24

    (24) expresion -> ENTERO .

    PUNTOCOMA       reduce using rule 24 (expresion -> ENTERO .)
    MAS             reduce using rule 24 (expresion -> ENTERO .)
    MENOS           reduce using rule 24 (expresion -> ENTERO .)
    POR             reduce using rule 24 (expresion -> ENTERO .)
    DIVIDIDO        reduce using rule 24 (expresion -> ENTERO .)
    MAYQUE          reduce using rule 24 (expresion -> ENTERO .)
    MENQUE          reduce using rule 24 (expresion -> ENTERO .)
    IGUALQUE        reduce using rule 24 (expresion -> ENTERO .)
    NIGUALQUE       reduce using rule 24 (expresion -> ENTERO .)
    PARDER          reduce using rule 24 (expresion -> ENTERO .)


state 25

    (25) expresion -> CADENA .

    PUNTOCOMA       reduce using rule 25 (expresion -> CADENA .)
    MAS             reduce using rule 25 (expresion -> CADENA .)
    MENOS           reduce using rule 25 (expresion -> CADENA .)
    POR             reduce using rule 25 (expresion -> CADENA .)
    DIVIDIDO        reduce using rule 25 (expresion -> CADENA .)
    MAYQUE          reduce using rule 25 (expresion -> CADENA .)
    MENQUE          reduce using rule 25 (expresion -> CADENA .)
    IGUALQUE        reduce using rule 25 (expresion -> CADENA .)
    NIGUALQUE       reduce using rule 25 (expresion -> CADENA .)
    PARDER          reduce using rule 25 (expresion -> CADENA .)


state 26

    (12) if_instr -> IF PARIZQ expresion . PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (13) if_else_instr -> IF PARIZQ expresion . PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (14) expresion -> expresion . MAS expresion
    (15) expresion -> expresion . MENOS expresion
    (16) expresion -> expresion . POR expresion
    (17) expresion -> expresion . DIVIDIDO expresion
    (18) expresion -> expresion . MAYQUE expresion
    (19) expresion -> expresion . MENQUE expresion
    (20) expresion -> expresion . IGUALQUE expresion
    (21) expresion -> expresion . NIGUALQUE expresion

    PARDER          shift and go to state 40
    MAS             shift and go to state 30
    MENOS           shift and go to state 31
    POR             shift and go to state 32
    DIVIDIDO        shift and go to state 33
    MAYQUE          shift and go to state 34
    MENQUE          shift and go to state 35
    IGUALQUE        shift and go to state 36
    NIGUALQUE       shift and go to state 37


state 27

    (9) imprimir_instr -> CONSOLE PUNTO LOG PARIZQ . expresion PARDER PUNTOCOMA
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MAYQUE expresion
    (19) expresion -> . expresion MENQUE expresion
    (20) expresion -> . expresion IGUALQUE expresion
    (21) expresion -> . expresion NIGUALQUE expresion
    (22) expresion -> . MENOS expresion
    (23) expresion -> . PARIZQ expresion PARDER
    (24) expresion -> . ENTERO
    (25) expresion -> . CADENA
    (26) expresion -> . ID

    MENOS           shift and go to state 22
    PARIZQ          shift and go to state 23
    ENTERO          shift and go to state 24
    CADENA          shift and go to state 25
    ID              shift and go to state 20

    expresion                      shift and go to state 41

state 28

    (10) declaracion_instr -> LET ID IGUAL expresion . PUNTOCOMA
    (14) expresion -> expresion . MAS expresion
    (15) expresion -> expresion . MENOS expresion
    (16) expresion -> expresion . POR expresion
    (17) expresion -> expresion . DIVIDIDO expresion
    (18) expresion -> expresion . MAYQUE expresion
    (19) expresion -> expresion . MENQUE expresion
    (20) expresion -> expresion . IGUALQUE expresion
    (21) expresion -> expresion . NIGUALQUE expresion

    PUNTOCOMA       shift and go to state 42
    MAS             shift and go to state 30
    MENOS           shift and go to state 31
    POR             shift and go to state 32
    DIVIDIDO        shift and go to state 33
    MAYQUE          shift and go to state 34
    MENQUE          shift and go to state 35
    IGUALQUE        shift and go to state 36
    NIGUALQUE       shift and go to state 37


state 29

    (11) asignacion_instr -> ID IGUAL expresion PUNTOCOMA .

    CONSOLE         reduce using rule 11 (asignacion_instr -> ID IGUAL expresion PUNTOCOMA .)
    LET             reduce using rule 11 (asignacion_instr -> ID IGUAL expresion PUNTOCOMA .)
    ID              reduce using rule 11 (asignacion_instr -> ID IGUAL expresion PUNTOCOMA .)
    IF              reduce using rule 11 (asignacion_instr -> ID IGUAL expresion PUNTOCOMA .)
    $end            reduce using rule 11 (asignacion_instr -> ID IGUAL expresion PUNTOCOMA .)
    LLAVDER         reduce using rule 11 (asignacion_instr -> ID IGUAL expresion PUNTOCOMA .)


state 30

    (14) expresion -> expresion MAS . expresion
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MAYQUE expresion
    (19) expresion -> . expresion MENQUE expresion
    (20) expresion -> . expresion IGUALQUE expresion
    (21) expresion -> . expresion NIGUALQUE expresion
    (22) expresion -> . MENOS expresion
    (23) expresion -> . PARIZQ expresion PARDER
    (24) expresion -> . ENTERO
    (25) expresion -> . CADENA
    (26) expresion -> . ID

    MENOS           shift and go to state 22
    PARIZQ          shift and go to state 23
    ENTERO          shift and go to state 24
    CADENA          shift and go to state 25
    ID              shift and go to state 20

    expresion                      shift and go to state 43

state 31

    (15) expresion -> expresion MENOS . expresion
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MAYQUE expresion
    (19) expresion -> . expresion MENQUE expresion
    (20) expresion -> . expresion IGUALQUE expresion
    (21) expresion -> . expresion NIGUALQUE expresion
    (22) expresion -> . MENOS expresion
    (23) expresion -> . PARIZQ expresion PARDER
    (24) expresion -> . ENTERO
    (25) expresion -> . CADENA
    (26) expresion -> . ID

    MENOS           shift and go to state 22
    PARIZQ          shift and go to state 23
    ENTERO          shift and go to state 24
    CADENA          shift and go to state 25
    ID              shift and go to state 20

    expresion                      shift and go to state 44

state 32

    (16) expresion -> expresion POR . expresion
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MAYQUE expresion
    (19) expresion -> . expresion MENQUE expresion
    (20) expresion -> . expresion IGUALQUE expresion
    (21) expresion -> . expresion NIGUALQUE expresion
    (22) expresion -> . MENOS expresion
    (23) expresion -> . PARIZQ expresion PARDER
    (24) expresion -> . ENTERO
    (25) expresion -> . CADENA
    (26) expresion -> . ID

    MENOS           shift and go to state 22
    PARIZQ          shift and go to state 23
    ENTERO          shift and go to state 24
    CADENA          shift and go to state 25
    ID              shift and go to state 20

    expresion                      shift and go to state 45

state 33

    (17) expresion -> expresion DIVIDIDO . expresion
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MAYQUE expresion
    (19) expresion -> . expresion MENQUE expresion
    (20) expresion -> . expresion IGUALQUE expresion
    (21) expresion -> . expresion NIGUALQUE expresion
    (22) expresion -> . MENOS expresion
    (23) expresion -> . PARIZQ expresion PARDER
    (24) expresion -> . ENTERO
    (25) expresion -> . CADENA
    (26) expresion -> . ID

    MENOS           shift and go to state 22
    PARIZQ          shift and go to state 23
    ENTERO          shift and go to state 24
    CADENA          shift and go to state 25
    ID              shift and go to state 20

    expresion                      shift and go to state 46

state 34

    (18) expresion -> expresion MAYQUE . expresion
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MAYQUE expresion
    (19) expresion -> . expresion MENQUE expresion
    (20) expresion -> . expresion IGUALQUE expresion
    (21) expresion -> . expresion NIGUALQUE expresion
    (22) expresion -> . MENOS expresion
    (23) expresion -> . PARIZQ expresion PARDER
    (24) expresion -> . ENTERO
    (25) expresion -> . CADENA
    (26) expresion -> . ID

    MENOS           shift and go to state 22
    PARIZQ          shift and go to state 23
    ENTERO          shift and go to state 24
    CADENA          shift and go to state 25
    ID              shift and go to state 20

    expresion                      shift and go to state 47

state 35

    (19) expresion -> expresion MENQUE . expresion
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MAYQUE expresion
    (19) expresion -> . expresion MENQUE expresion
    (20) expresion -> . expresion IGUALQUE expresion
    (21) expresion -> . expresion NIGUALQUE expresion
    (22) expresion -> . MENOS expresion
    (23) expresion -> . PARIZQ expresion PARDER
    (24) expresion -> . ENTERO
    (25) expresion -> . CADENA
    (26) expresion -> . ID

    MENOS           shift and go to state 22
    PARIZQ          shift and go to state 23
    ENTERO          shift and go to state 24
    CADENA          shift and go to state 25
    ID              shift and go to state 20

    expresion                      shift and go to state 48

state 36

    (20) expresion -> expresion IGUALQUE . expresion
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MAYQUE expresion
    (19) expresion -> . expresion MENQUE expresion
    (20) expresion -> . expresion IGUALQUE expresion
    (21) expresion -> . expresion NIGUALQUE expresion
    (22) expresion -> . MENOS expresion
    (23) expresion -> . PARIZQ expresion PARDER
    (24) expresion -> . ENTERO
    (25) expresion -> . CADENA
    (26) expresion -> . ID

    MENOS           shift and go to state 22
    PARIZQ          shift and go to state 23
    ENTERO          shift and go to state 24
    CADENA          shift and go to state 25
    ID              shift and go to state 20

    expresion                      shift and go to state 49

state 37

    (21) expresion -> expresion NIGUALQUE . expresion
    (14) expresion -> . expresion MAS expresion
    (15) expresion -> . expresion MENOS expresion
    (16) expresion -> . expresion POR expresion
    (17) expresion -> . expresion DIVIDIDO expresion
    (18) expresion -> . expresion MAYQUE expresion
    (19) expresion -> . expresion MENQUE expresion
    (20) expresion -> . expresion IGUALQUE expresion
    (21) expresion -> . expresion NIGUALQUE expresion
    (22) expresion -> . MENOS expresion
    (23) expresion -> . PARIZQ expresion PARDER
    (24) expresion -> . ENTERO
    (25) expresion -> . CADENA
    (26) expresion -> . ID

    MENOS           shift and go to state 22
    PARIZQ          shift and go to state 23
    ENTERO          shift and go to state 24
    CADENA          shift and go to state 25
    ID              shift and go to state 20

    expresion                      shift and go to state 50

state 38

    (22) expresion -> MENOS expresion .
    (14) expresion -> expresion . MAS expresion
    (15) expresion -> expresion . MENOS expresion
    (16) expresion -> expresion . POR expresion
    (17) expresion -> expresion . DIVIDIDO expresion
    (18) expresion -> expresion . MAYQUE expresion
    (19) expresion -> expresion . MENQUE expresion
    (20) expresion -> expresion . IGUALQUE expresion
    (21) expresion -> expresion . NIGUALQUE expresion

    PUNTOCOMA       reduce using rule 22 (expresion -> MENOS expresion .)
    MAS             reduce using rule 22 (expresion -> MENOS expresion .)
    MENOS           reduce using rule 22 (expresion -> MENOS expresion .)
    POR             reduce using rule 22 (expresion -> MENOS expresion .)
    DIVIDIDO        reduce using rule 22 (expresion -> MENOS expresion .)
    MAYQUE          reduce using rule 22 (expresion -> MENOS expresion .)
    MENQUE          reduce using rule 22 (expresion -> MENOS expresion .)
    IGUALQUE        reduce using rule 22 (expresion -> MENOS expresion .)
    NIGUALQUE       reduce using rule 22 (expresion -> MENOS expresion .)
    PARDER          reduce using rule 22 (expresion -> MENOS expresion .)

  ! MAS             [ shift and go to state 30 ]
  ! MENOS           [ shift and go to state 31 ]
  ! POR             [ shift and go to state 32 ]
  ! DIVIDIDO        [ shift and go to state 33 ]
  ! MAYQUE          [ shift and go to state 34 ]
  ! MENQUE          [ shift and go to state 35 ]
  ! IGUALQUE        [ shift and go to state 36 ]
  ! NIGUALQUE       [ shift and go to state 37 ]


state 39

    (23) expresion -> PARIZQ expresion . PARDER
    (14) expresion -> expresion . MAS expresion
    (15) expresion -> expresion . MENOS expresion
    (16) expresion -> expresion . POR expresion
    (17) expresion -> expresion . DIVIDIDO expresion
    (18) expresion -> expresion . MAYQUE expresion
    (19) expresion -> expresion . MENQUE expresion
    (20) expresion -> expresion . IGUALQUE expresion
    (21) expresion -> expresion . NIGUALQUE expresion

    PARDER          shift and go to state 51
    MAS             shift and go to state 30
    MENOS           shift and go to state 31
    POR             shift and go to state 32
    DIVIDIDO        shift and go to state 33
    MAYQUE          shift and go to state 34
    MENQUE          shift and go to state 35
    IGUALQUE        shift and go to state 36
    NIGUALQUE       shift and go to state 37


state 40

    (12) if_instr -> IF PARIZQ expresion PARDER . LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (13) if_else_instr -> IF PARIZQ expresion PARDER . LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA

    LLAVIZQ         shift and go to state 52


state 41

    (9) imprimir_instr -> CONSOLE PUNTO LOG PARIZQ expresion . PARDER PUNTOCOMA
    (14) expresion -> expresion . MAS expresion
    (15) expresion -> expresion . MENOS expresion
    (16) expresion -> expresion . POR expresion
    (17) expresion -> expresion . DIVIDIDO expresion
    (18) expresion -> expresion . MAYQUE expresion
    (19) expresion -> expresion . MENQUE expresion
    (20) expresion -> expresion . IGUALQUE expresion
    (21) expresion -> expresion . NIGUALQUE expresion

    PARDER          shift and go to state 53
    MAS             shift and go to state 30
    MENOS           shift and go to state 31
    POR             shift and go to state 32
    DIVIDIDO        shift and go to state 33
    MAYQUE          shift and go to state 34
    MENQUE          shift and go to state 35
    IGUALQUE        shift and go to state 36
    NIGUALQUE       shift and go to state 37


state 42

    (10) declaracion_instr -> LET ID IGUAL expresion PUNTOCOMA .

    CONSOLE         reduce using rule 10 (declaracion_instr -> LET ID IGUAL expresion PUNTOCOMA .)
    LET             reduce using rule 10 (declaracion_instr -> LET ID IGUAL expresion PUNTOCOMA .)
    ID              reduce using rule 10 (declaracion_instr -> LET ID IGUAL expresion PUNTOCOMA .)
    IF              reduce using rule 10 (declaracion_instr -> LET ID IGUAL expresion PUNTOCOMA .)
    $end            reduce using rule 10 (declaracion_instr -> LET ID IGUAL expresion PUNTOCOMA .)
    LLAVDER         reduce using rule 10 (declaracion_instr -> LET ID IGUAL expresion PUNTOCOMA .)


state 43

    (14) expresion -> expresion MAS expresion .
    (14) expresion -> expresion . MAS expresion
    (15) expresion -> expresion . MENOS expresion
    (16) expresion -> expresion . POR expresion
    (17) expresion -> expresion . DIVIDIDO expresion
    (18) expresion -> expresion . MAYQUE expresion
    (19) expresion -> expresion . MENQUE expresion
    (20) expresion -> expresion . IGUALQUE expresion
    (21) expresion -> expresion . NIGUALQUE expresion
